Fixed overflowing soundcloud image

--- a/styles.css
+++ b/styles.css
@@ -112,9 +112,14 @@ a {
     z-index: 10;
 }
 
+#soundcloud-img-container {
+    overflow: hidden;
+}
+
 #soundcloud-img {
     display: inline-block;
     width: 100%;
+    height: auto;
     margin: -25% 0;
 }
 
